--- a/manifest.json
+++ b/manifest.json
@@ -9,9 +9,10 @@
       "16": "icons/icon16.png",
       "48": "icons/icon48.png"
    },
+   "manifest_version": 2,
    "name": "Strict Pomodoro",
    "options_page": "options.html",
    "permissions": [ "notifications", "tabs", "*://*/*" ],
    "update_url": "http://clients2.google.com/service/update2/crx",
-   "version": "1.5.0.1"
+   "version": "1.5.0.2"
 }
