--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,7 @@
 {
-   "background_page": "background.html",
+   "background": {
+      "page": "background.html"
+   },
    "browser_action": {
       "default_icon": "icons/work_pending.png"
    },
@@ -13,6 +15,5 @@
    "name": "Strict Pomodoro",
    "options_page": "options.html",
    "permissions": [ "notifications", "tabs", "*://*/*" ],
-   "update_url": "http://clients2.google.com/service/update2/crx",
-   "version": "1.5.0.2"
+   "version": "1.5.0.3"
 }
