--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
    "background": {
-      "page": "background.html"
+      "scripts": ["background.js"]
    },
    "browser_action": {
       "default_icon": "icons/work_pending.png"
@@ -15,5 +15,9 @@
    "name": "Strict Pomodoro",
    "options_page": "options.html",
    "permissions": [ "notifications", "tabs", "<all_urls>" ],
-   "version": "1.5.0.4"
+   "version": "1.5.0.4",
+   "web_accessible_resources": [
+      "icons/work_full.png",
+      "icons/break_full.png"
+   ]
 }
