actually use options for durations and site lists

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,8 @@
       {
          "matches": ["<all_urls>"],
          "css": ["blocking/content.css"],
-         "js": ["phases.js", "blocking/matcher.js", "blocking/content.js"],
+         "js": ["phases.js", "options/storage.js", "blocking/matcher.js",
+                "blocking/content.js"],
          "run_at": "document_end"
       }
    ],
