--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
    "background": {
-      "scripts": ["options/storage.js", "phases.js", "browserAction.js",
-                  "notifications.js", "blocking/router.js",
-                  "eventPage.js"],
+      "scripts": ["lib/options.js", "lib/phases.js", "background/browserAction.js",
+                  "background/notifications.js", "background/phaseAlarms.js",
+                  "background/reset.js", "background/tabMessageRouter.js"],
       "persistent": false
    },
    "browser_action": {
@@ -11,9 +11,9 @@
    "content_scripts": [
       {
          "matches": ["<all_urls>"],
-         "css": ["controls.css", "blocking/content.css"],
-         "js": ["options/storage.js", "phases.js", "blocking/matcher.js",
-                "controls.js", "blocking/content.js"],
+         "css": ["content/controls.css", "content/blocking.css"],
+         "js": ["lib/options.js", "lib/phases.js", "lib/siteMatcher.js",
+                "content/blocking.js", "content/controls.js"],
          "run_at": "document_end"
       }
    ],
