--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,9 @@
    },
    "manifest_version": 2,
    "name": "__MSG_ext_name__",
-   "options_page": "options.html",
+   "options_ui": {
+       "page": "options.html"
+   },
    "permissions": [ "notifications", "tabs", "<all_urls>" ],
    "version": "1.7.0",
    "web_accessible_resources": [
